2011-03-15  Paul Eggert  <eggert@cs.ucla.edu>

	* alloc.c (check_cons_list): Do not define unless GC_CHECK_CONS_LIST.
	* lisp.h (check_cons_list): Declare if GC_CHECK_CONS_LIST; this
	avoids undefined behavior in theory.

	* regex.c (IF_LINT): Add defn, for benefit of ../lib-src.

	Use functions, not macros, for up- and down-casing (Bug#8254).
	* buffer.h (DOWNCASE_TABLE, UPCASE_TABLE, DOWNCASE, UPPERCASEP):
	(NOCASEP, LOWERCASEP, UPCASE, UPCASE1): Remove.  All callers changed
	to use the following functions instead of these macros.
	(downcase): Adjust to lack of DOWNCASE_TABLE.  Return int, not
	EMACS_INT, since callers assume the returned value fits in int.
	(upcase1): Likewise, for UPCASE_TABLE.
	(uppercasep, lowercasep, upcase): New static inline functions.
	* editfns.c (Fchar_equal): Remove no-longer-needed workaround for
	the race-condition problem in the old DOWNCASE.

	* regex.c (CHARSET_LOOKUP_RANGE_TABLE_RAW, POP_FAILURE_REG_OR_COUNT):
	Rename locals to avoid shadowing.
	(regex_compile, re_match_2_internal): Move locals to avoid shadowing.
	(regex_compile, re_search_2, re_match_2_internal):
	Remove unused local vars.
	(FREE_VAR): Rewrite so as not to use empty "else",
	which gcc can warn about.
	(regex_compile, re_match_2_internal): Mark locals as initialized.
	(RETALLOC_IF): Define only if needed.
	(WORDCHAR_P): Likewise.  This one is never needed, but is used
	only in a comment talking about a compiler bug, so put inside
	the #if 0 of that comment.
	(CHARSET_LOOKUP_BITMAP, FAIL_STACK_FULL, RESET_FAIL_STACK):
	(PUSH_FAILURE_ELT, BUF_PUSH_3, STOP_ADDR_VSTRING):
	Remove; unused.

	* search.c (boyer_moore): Rename locals to avoid shadowing.
	* character.h (FETCH_STRING_CHAR_AS_MULTIBYTE_ADVANCE):
	(PREV_CHAR_BOUNDARY): Likewise.

	* search.c (simple_search): Remove unused var.

	* dired.c (compile_pattern): Move decl from here ...
	* lisp.h: ... to here, so that it can be checked.
	(struct re_registers): New forward decl.
